<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    >

    <RelativeLayout
        android:id="@+id/url_dialog_title_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top_corner_shape">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:text="@string/add_url"
            android:textColor="#ffffff"
            android:textSize="19sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/url_dialog_action_btn_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/url_dialog_title_wrapper"
        android:background="@drawable/rounded_bottom_corner_shape"
        android:orientation="vertical">

        <EditText
            android:id="@+id/url_layout_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:backgroundTint="@color/transparent"
            android:textCursorDrawable="@drawable/cursor"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:hint="example.com" />

        <TextView
            android:id="@+id/url_dialog_fragment_error_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:text="invalid url"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="6dp"
            android:visibility="gone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorPrimary"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/url_dialog_cancel_btn"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/url_dialog_add_btn"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:layout_weight="1"
                android:text="@string/add"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>